<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android" >

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/activity_background">

        <include
            android:id="@+id/titleTextView"
            layout="@layout/title_layout"
            app:layout_constraintTop_toTopOf="parent"
            app:title="@{@string/rtsp_list}" />

        <android.support.v4.widget.SwipeRefreshLayout
            android:id="@+id/swipeRefreshLayout"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/titleTextView">

            <HorizontalScrollView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                app:layout_constraintBottom_toTopOf="@+id/bottomLayout"
                app:layout_constraintTop_toBottomOf="parent">

                <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <LinearLayout
                        android:id="@+id/titleLayout"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="5dp">

                        <TextView
                            android:id="@+id/titleName"
                            android:layout_width="@dimen/title_rtsp_name"
                            android:layout_height="wrap_content"
                            android:text="@string/rtsp_name"
                            android:textSize="@dimen/title_text_size"
                            android:textStyle="bold" />

                        <View
                            android:layout_width="@dimen/title_split_width"
                            android:layout_height="match_parent"
                            android:layout_margin="2dp"
                            android:background="@color/dim_gray" />

                        <TextView
                            android:id="@+id/titleLocation"
                            android:layout_width="@dimen/title_rtsp_location"
                            android:layout_height="wrap_content"
                            android:text="@string/rtsp_location"
                            android:textSize="@dimen/title_text_size"
                            android:textStyle="bold" />

                        <View
                            android:layout_width="@dimen/title_split_width"
                            android:layout_height="match_parent"
                            android:layout_margin="2dp"
                            android:background="@color/dim_gray" />

                        <TextView
                            android:id="@+id/titleIp"
                            android:layout_width="@dimen/title_rtsp_ip"
                            android:layout_height="wrap_content"
                            android:text="@string/rtsp_ip"
                            android:textSize="@dimen/title_text_size"
                            android:textStyle="bold" />

                        <View
                            android:layout_width="@dimen/title_split_width"
                            android:layout_height="match_parent"
                            android:layout_margin="2dp"
                            android:background="@color/dim_gray" />

                        <TextView
                            android:id="@+id/titleDescription"
                            android:layout_width="@dimen/title_rtsp_description"
                            android:layout_height="wrap_content"
                            android:text="@string/rtsp_description"
                            android:textSize="@dimen/title_text_size"
                            android:textStyle="bold" />
                    </LinearLayout>

                    <com.gorilla.vc.view.customized.StyledRecyclerView
                        android:id="@+id/rtspList"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_below="@+id/titleLayout"
                        android:orientation="vertical"
                        app:rvDividerDrawable="@drawable/row_item_divider"
                        app:rvDividerMode="beginning|end"
                        tools:listitem="@layout/rtsp_list_item" />
                </RelativeLayout>
            </HorizontalScrollView>
        </android.support.v4.widget.SwipeRefreshLayout>

        <LinearLayout
            android:id="@+id/bottomLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintBottom_toBottomOf="parent">

            <Button
                android:id="@+id/cancelBtn"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@color/bottom_button_background"
                android:text="@string/cancel"
                android:textColor="@color/white"
                style="?android:attr/buttonBarButtonStyle"/>

            <Button
                android:id="@+id/confirmBtn"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@color/bottom_button_background"
                android:text="@string/confirm"
                android:textColor="@color/white"
                style="?android:attr/buttonBarButtonStyle"/>
        </LinearLayout>

        <com.example.shawnwang.searchtest.WaitingProgress
            android:id="@+id/progress"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:visibility="gone" />

    </android.support.constraint.ConstraintLayout>
</layout>