<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <import type="android.view.View"/>
        <variable
            name="isMessageEnable"
            type="boolean"/>

        <variable
            name="isExpandControlView"
            type="boolean"/>

        <variable
            name="isChatSwitchChecked"
            type="boolean" />

    </data>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:id="@+id/controlLayout"
            android:layout_width="150dp"
            android:layout_height="match_parent"
            android:visibility="@{isExpandControlView ? View.VISIBLE : View.GONE}">

            <android.support.v7.widget.RecyclerView
                android:id="@+id/participantList"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_above="@+id/messageLayout" />

            <RelativeLayout
                android:id="@+id/messageLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="15dp"
                android:layout_alignParentBottom="true">

                <TextView
                    android:id="@+id/chatText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_marginEnd="5dp"
                    android:layout_centerVertical="true"
                    android:textAlignment="center"
                    android:text="@string/message" />

                <Switch
                    android:id="@+id/chatSwitch"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_toEndOf="@+id/chatText"
                    android:checked="@={isChatSwitchChecked}"
                    style="@style/SettingSwitchBtn" />

                <TextView
                    android:id="@+id/chatSwitchOnText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="0dp"
                    android:layout_marginStart="12dp"
                    android:layout_alignStart="@+id/chatSwitch"
                    android:text="@string/switch_on"
                    android:visibility="@{isChatSwitchChecked ? View.VISIBLE : View.GONE}"
                    tools:visibility="visible"
                    style="@style/SettingSwitchText" />

                <TextView
                    android:id="@+id/chatSwitchOffText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="0dp"
                    android:layout_marginEnd="13dp"
                    android:layout_alignEnd="@+id/chatSwitch"
                    android:text="@string/switch_off"
                    android:visibility="@{isChatSwitchChecked ? View.GONE : View.VISIBLE}"
                    tools:visibility="visible"
                    style="@style/SettingSwitchText" />
            </RelativeLayout>

            <View
                android:id="@+id/verticalSplit"
                android:layout_width="2dp"
                android:layout_height="match_parent"
                android:layout_alignParentEnd="true"
                android:layout_marginTop="3dp"
                android:layout_marginBottom="3dp"
                android:background="@color/dim_gray"/>
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_toEndOf="@+id/controlLayout">

            <android.support.v7.widget.RecyclerView
                android:id="@+id/recyclerView"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_above="@+id/inputLayout"
                android:visibility="@{isMessageEnable ? View.VISIBLE : View.GONE}" />

            <LinearLayout
                android:id="@+id/inputLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:gravity="center"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/showControlImg"
                    android:layout_width="35dp"
                    android:layout_height="35dp"
                    app:showControlImgSrc="@{isExpandControlView}"
                    tools:src="@mipmap/ic_arrow_left"/>

                <EditText
                    android:id="@+id/text"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="10dp"
                    android:layout_weight="1"
                    android:background="@drawable/message_editor_bg"
                    android:gravity="left|center"
                    android:hint="@string/message_hint"
                    android:padding="10dp"
                    android:textColorHint="@color/message_editor_bg_stroke"
                    android:textSize="15sp"
                    android:visibility="@{isMessageEnable ? View.VISIBLE : View.INVISIBLE}"/>

                <ImageView
                    android:id="@+id/send"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:clickable="true"
                    android:padding="5dp"
                    android:src="@drawable/ic_send_black_24dp"
                    app:pressColor="@{@color/red}"
                    android:visibility="@{isMessageEnable ? View.VISIBLE : View.INVISIBLE}"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_centerInParent="true"
                android:gravity="center"
                android:visibility="@{isMessageEnable ? View.GONE : View.VISIBLE}">

                <ImageView
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:src="@drawable/ic_speaker_notes_off_black_24dp"/>
                <TextView
                    android:layout_marginTop="10dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/disable_message"
                    android:textColor="@color/dim_gray"
                    android:textStyle="bold"/>

            </LinearLayout>
        </RelativeLayout>
    </RelativeLayout>
</layout>